--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,13 @@
 buildscript {
     ext.kotlin_version = '1.6.21'
     repositories {
+        google()
         mavenCentral()
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.1"
+        classpath 'com.google.gms:google-services:4.3.13'
     }
 }
 plugins {
